in app update added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
     "fluttergpt.apiKey": "AIzaSyAinztrMnv_CUvzMdNGGaIihGa6rHkn9AA",
-    "cmake.sourceDirectory": "D:/mds/mds/build/windows/x64/extracted/firebase_cpp_sdk_windows"
+    "cmake.sourceDirectory": "D:/mds/mds/build/windows/x64/extracted/firebase_cpp_sdk_windows",
+    "cmake.ignoreCMakeListsMissing": true
 }
