--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+2
+version: 1.2.3
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -34,46 +34,44 @@ dependencies:
   bubble_tab_indicator: ^0.1.6
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
-  connectivity_plus: ^5.0.2
   cloud_firestore: ^4.14.0
+  connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
-  font_awesome_flutter:
+  firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
   flutter_dash: ^1.0.0
-  fluttertoast: ^8.2.4
-  firebase_storage: ^11.6.0
   flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
+  fluttertoast: ^8.2.4
+  font_awesome_flutter: null
   get: ^4.6.6
   get_storage: ^2.1.1
   google_sign_in: ^6.2.1
-  hive:
-  hive_flutter:
+  hive: null
+  hive_flutter: null
+  http: ^1.2.0
   iconly: ^1.0.1
-  image_picker: ^1.0.7
-  image_cropper: ^5.0.1
   image: ^4.1.4
+  image_cropper: ^5.0.1
+  image_picker: ^1.0.7
   local_auth: ^2.1.7
   lottie: ^3.0.0
-  permission_handler: ^11.2.0
   page_transition: ^2.1.0
+  package_info_plus: ^5.0.1
+  permission_handler: ^11.2.0
   provider: ^6.1.1
-  shimmer: ^3.0.0
   share_plus: ^7.2.1
+  shimmer: ^3.0.0
   smooth_page_indicator: ^1.1.0
-  upgrader: ^9.0.0
+  
+  url_launcher: ^6.2.5
   uuid: ^4.3.3
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
