--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.4
+version: 1.2.7
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -67,6 +67,7 @@ dependencies:
   share_plus: ^7.2.1
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.2.3
   
   url_launcher: ^6.2.5
   uuid: ^4.3.3
