--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.7
+version: 1.2.13
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -46,6 +46,7 @@ dependencies:
   flutter_dash: ^1.0.0
   flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
+  flutter_pdfview: ^1.3.4
   fluttertoast: ^8.2.4
   font_awesome_flutter: null
   get: ^4.6.6
@@ -61,6 +62,8 @@ dependencies:
   local_auth: ^2.1.7
   lottie: ^3.0.0
   page_transition: ^2.1.0
+  path_provider: ^2.1.5
+  pdf: ^3.11.1
   package_info_plus: ^5.0.1
   permission_handler: ^11.2.0
   provider: ^6.1.1
@@ -90,6 +93,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - shorebird.yaml
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
