--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.13
+version: 1.2.14
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -31,16 +31,17 @@ dependencies:
   animate_do: ^3.1.2
   animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
+  async: ^2.11.0
   bubble_tab_indicator: ^0.1.6
   cached_network_image: ^3.3.1
-  carousel_slider: ^4.2.1
-  cloud_firestore: ^4.14.0
-  connectivity_plus: ^5.0.2
+  carousel_slider: ^5.0.0
+  cloud_firestore: ^5.5.0
+  connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.2
-  email_validator: ^2.1.17
-  firebase_auth: ^4.15.3
-  firebase_core: ^2.24.2
-  firebase_storage: ^11.6.0
+  email_validator: ^3.0.0
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
+  firebase_storage: ^12.3.6
   flutter:
     sdk: flutter
   flutter_dash: ^1.0.0
@@ -57,17 +58,18 @@ dependencies:
   http: ^1.2.0
   iconly: ^1.0.1
   image: ^4.1.4
-  image_cropper: ^5.0.1
+  image_cropper: ^8.0.2
   image_picker: ^1.0.7
+  intl: ^0.17.0
   local_auth: ^2.1.7
   lottie: ^3.0.0
   page_transition: ^2.1.0
   path_provider: ^2.1.5
   pdf: ^3.11.1
-  package_info_plus: ^5.0.1
+  package_info_plus: ^8.1.1
   permission_handler: ^11.2.0
   provider: ^6.1.1
-  share_plus: ^7.2.1
+  share_plus: ^10.1.2
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.3
@@ -76,7 +78,7 @@ dependencies:
   uuid: ^4.3.3
 
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
