--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.41
+version: 1.2.44
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -80,7 +80,6 @@ dependencies:
   smooth_page_indicator: ^2.0.1
   shared_preferences: ^2.3.4
   
-  url_launcher: ^6.2.5
   uuid: ^4.3.3
   fl_chart: ^0.66.2
   google_fonts: ^6.3.2
@@ -89,6 +88,8 @@ dependencies:
   google_maps_flutter: any
   flutter_background_service: any
   geolocator: any
+  flutter_email_sender: ^8.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
