--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.46
+version: 1.2.48
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animate_do: ^4.2.0
   animated_splash_screen: ^1.3.0
+  android_intent_plus: ^4.0.0
   animated_text_kit: ^4.2.2
   async: ^2.11.0
   firebase_messaging: ^16.1.1
@@ -76,10 +77,10 @@ dependencies:
   permission_handler: ^12.0.1
   provider: ^6.1.1
   share_plus: ^12.0.1
+  flutter_contacts: ^1.1.9+2
   shimmer: ^3.0.0
   smooth_page_indicator: ^2.0.1
   shared_preferences: ^2.3.4
-  
   uuid: ^4.3.3
   fl_chart: ^0.66.2
   google_fonts: ^6.3.2
